force-app/main/default/objects/Audio_Transcript__e/Audio_Transcript__e.object-meta.xml
<CustomObject>
    <label>Audio Transcript</label>
    <pluralLabel>Audio Transcripts</pluralLabel>
</CustomObject>