force-app/main/default/objects/Audio_Transcript__e/fields/Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Document_Id__c</fullName>
    <label>Content Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>