force-app/main/default/objects/Audio_Transcript__e/fields/Running_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Running_User_Id__c</fullName>
    <label>Running User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>